[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://ARCADE_N.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://sprites/button pressed..png" type="Texture" id=3]
[ext_resource path="res://sprites/button normal.png" type="Texture" id=4]
[ext_resource path="res://sprites/button hover.png" type="Texture" id=5]
[ext_resource path="res://sprites/snake.png" type="Texture" id=6]
[ext_resource path="res://sprites/cherry.png" type="Texture" id=7]
[ext_resource path="res://scenes/TileMap.tscn" type="PackedScene" id=8]
[ext_resource path="res://sprites/ghost.png" type="Texture" id=9]
[ext_resource path="res://sprites/explosion.png" type="Texture" id=10]
[ext_resource path="res://sounds/Button.wav" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 6
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Main"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -213.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0.470588, 1 )
text = "Snakebomb"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="Main"]
margin_left = 72.0
margin_top = 75.0
margin_right = 216.0
margin_bottom = 123.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="Main/StartButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0.470588, 1 )
text = "Start"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HowToButton" type="TextureButton" parent="Main"]
margin_left = 72.0
margin_top = 144.0
margin_right = 216.0
margin_bottom = 192.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="Main/HowToButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0.470588, 1 )
text = "How to play"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="Main"]
margin_left = 72.0
margin_top = 216.0
margin_right = 216.0
margin_bottom = 264.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Main/ExitButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0.470588, 1 )
text = "Exit"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HowTo" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HowTo"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -213.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0.470588, 1 )
text = "How to Play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="HowTo"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0
margin_bottom = -56.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0.470588, 1 )
text = "Use the Arrow keys, WASD, ZQSD or IJKL
to change direction

Collect cherry-bombs to grow larger.


Run into a wall, a ghost or yourself
to explode.



Destroy all ghosts with your explosion
to get to the next level."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprites" type="Control" parent="HowTo/Label2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -16.0
margin_bottom = -24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 236, 100 )
texture = ExtResource( 7 )

[node name="Sprite10" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.882353, 1, 1 )
position = Vector2( 128, 152 )
texture = ExtResource( 9 )
vframes = 4
hframes = 2

[node name="Sprite24" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.882353, 1, 1 )
position = Vector2( 136, 200 )
texture = ExtResource( 9 )
vframes = 4
hframes = 2

[node name="Sprite25" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.882353, 1, 1 )
position = Vector2( 120, 208 )
texture = ExtResource( 9 )
vframes = 4
hframes = 2

[node name="Sprite26" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.882353, 1, 1 )
position = Vector2( 152, 192 )
texture = ExtResource( 9 )
vframes = 4
hframes = 2

[node name="Sprite28" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.882353, 1, 1 )
position = Vector2( 152, 192 )
texture = ExtResource( 9 )
vframes = 4
hframes = 2

[node name="Sprite27" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.882353, 1, 1 )
position = Vector2( 144, 216 )
texture = ExtResource( 9 )
vframes = 4
hframes = 2

[node name="Sprite2" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.666667, 0.0431373, 1 )
position = Vector2( 228, 100 )
texture = ExtResource( 6 )
vframes = 3
hframes = 8
frame = 1

[node name="Sprite3" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.666667, 0.0431373, 1 )
position = Vector2( 220, 100 )
texture = ExtResource( 6 )
vframes = 3
hframes = 8
frame = 8

[node name="Sprite4" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.666667, 0.0431373, 1 )
position = Vector2( 212, 100 )
texture = ExtResource( 6 )
vframes = 3
hframes = 8
frame = 8

[node name="Sprite5" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.666667, 0.0431373, 1 )
position = Vector2( 204, 100 )
texture = ExtResource( 6 )
vframes = 3
hframes = 8
frame = 16

[node name="Sprite9" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.666667, 0.0431373, 1 )
position = Vector2( 100, 148 )
texture = ExtResource( 6 )
vframes = 3
hframes = 8
frame = 18

[node name="Sprite8" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.666667, 0.0431373, 1 )
position = Vector2( 92, 148 )
texture = ExtResource( 6 )
vframes = 3
hframes = 8
frame = 8

[node name="Sprite7" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.666667, 0.0431373, 1 )
position = Vector2( 84, 148 )
texture = ExtResource( 6 )
vframes = 3
hframes = 8
frame = 8

[node name="Sprite6" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.666667, 0.0431373, 1 )
position = Vector2( 76, 148 )
texture = ExtResource( 6 )
vframes = 3
hframes = 8
frame = 4

[node name="Sprite14" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.666667, 0.0431373, 1 )
position = Vector2( 160, 152 )
texture = ExtResource( 6 )
vframes = 3
hframes = 8
frame = 18

[node name="Sprite13" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.666667, 0.0431373, 1 )
position = Vector2( 152, 152 )
texture = ExtResource( 6 )
vframes = 3
hframes = 8
frame = 8

[node name="Sprite12" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.666667, 0.0431373, 1 )
position = Vector2( 144, 152 )
texture = ExtResource( 6 )
vframes = 3
hframes = 8
frame = 8

[node name="Sprite11" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.666667, 0.0431373, 1 )
position = Vector2( 136, 152 )
texture = ExtResource( 6 )
vframes = 3
hframes = 8
frame = 4

[node name="Sprite18" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.666667, 0.0431373, 1 )
position = Vector2( 232, 152 )
texture = ExtResource( 6 )
vframes = 3
hframes = 8
frame = 10

[node name="Sprite19" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.666667, 0.0431373, 1 )
position = Vector2( 232, 144 )
texture = ExtResource( 6 )
vframes = 3
hframes = 8
frame = 9

[node name="Sprite20" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.666667, 0.0431373, 1 )
position = Vector2( 232, 136 )
texture = ExtResource( 6 )
vframes = 3
hframes = 8
frame = 13

[node name="Sprite21" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.666667, 0.0431373, 1 )
position = Vector2( 224, 136 )
texture = ExtResource( 6 )
vframes = 3
hframes = 8
frame = 8

[node name="Sprite22" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.666667, 0.0431373, 1 )
position = Vector2( 216, 136 )
texture = ExtResource( 6 )
vframes = 3
hframes = 8
frame = 12

[node name="Sprite23" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.666667, 0.0431373, 1 )
position = Vector2( 216, 144 )
texture = ExtResource( 6 )
vframes = 3
hframes = 8
frame = 3

[node name="Sprite17" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.666667, 0.0431373, 1 )
position = Vector2( 224, 152 )
texture = ExtResource( 6 )
vframes = 3
hframes = 8
frame = 8

[node name="Sprite16" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.666667, 0.0431373, 1 )
position = Vector2( 216, 152 )
texture = ExtResource( 6 )
vframes = 3
hframes = 8
frame = 8

[node name="Sprite15" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0, 0.666667, 0.0431373, 1 )
position = Vector2( 208, 152 )
texture = ExtResource( 6 )
vframes = 3
hframes = 8
frame = 16

[node name="Sprite29" type="Sprite" parent="HowTo/Label2/Sprites"]
modulate = Color( 0.933333, 0, 0, 1 )
position = Vector2( 112, 208 )
texture = ExtResource( 10 )
hframes = 6
frame = 2

[node name="TileMap" parent="HowTo/Label2/Sprites" instance=ExtResource( 8 )]
modulate = Color( 1, 0, 0.470588, 1 )
tile_data = PoolIntArray( 1114119, 0, 0, 1114120, 0, 2, 1179654, 0, 0, 1179655, 0, 65540, 1179656, 0, 65538, 1245190, 0, 131072, 1245191, 0, 131073, 1245192, 0, 131074 )

[node name="BackButton" type="TextureButton" parent="HowTo"]
margin_left = 72.0
margin_top = 232.0
margin_right = 216.0
margin_bottom = 280.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HowTo/BackButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0.470588, 1 )
text = "Back"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ButtonPressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0
[connection signal="pressed" from="Main/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Main/HowToButton" to="." method="_on_HowToButton_pressed"]
[connection signal="pressed" from="Main/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="HowTo/BackButton" to="." method="_on_BackButton_pressed"]
